@@ -5,6 +5,7 @@
 - added: `debugging` supports live reloading
 - added: new schema operations: `schema.setInsert()` and `schema.setUpdate()`
 - added: `RESTBuilder.patch([data])`
+- added: `RESTBuilder.type(new-content-type)`
 - added: `CONVERT(obj, schema)` for quick converting values like Schema (more in docs.)
 - added: `Capitalize2` schema type which converts only the first char
 - added: `MailMessage.high()` sets `high` priority of the email messsage
